# ProWinder_Dynamics

./: .gitignore  .markdownlint.yaml  README.md  STRATEGY_DOCS_README.md  SYNTHESIS_SESSION_17FEB.md  pyproject.toml
01_Requirements/: README.md
01_Requirements/Bibliography/: Bibliographic_Study_Report.md
01_Requirements/constraints/: README.md
01_Requirements/functional/: README.md
01_Requirements/non_functional/: README.md
01_Requirements/use_cases/: README.md
02_Architecture/: README.md
03_Components/Actuators/: base_motor.py
03_Components/Controllers/: base_controller.py
03_Components/Mechanics/: base_mechanics.py  roller.py
03_Components/Sensors/: base_sensor.py
04_Integration/: README.md
04_Integration/UseCase_TorqueMode/: simple_simulation.py
05_Validation/: README.md
05_Validation/Deliverables/: AppWindingUnWinding.pptx  Modelling Winding Machine.docx  SE vs Competitors .xlsx  State art Winding UnWinding.docx
06_Utilities/: README.md
docs/: README.md
docs/algorithms/: Adaptive_Notch_Filter_Algo.md  InertiaEstimator.md  README.md  RadiusCalculator.md  T2.1.2_InertiaEstimator_Spec.md  T2.1.3_TensionObserver.md
notebooks/: T2_1_3_TensionObserver_Simulation.ipynb
scripts/: activate_venv.ps1  analyze_phases.py  debug_alpha.py  debug_friction_separation.py  debug_inertia.py
tests/: test_calibration_kelvin_voigt.py  test_digital_twin_full.py  test_filter_scenario.py  test_inertia_estimator.py  test_observer_scenario.py  test_radius_calculator.py  test_tension_observer.py  test_validation_legacy.py  test_validation_powersys.py
(+69 files in other folders)
