[project]
name = "prowinder_dynamics"
version = "0.1.0"
description = "ProWinder Dynamics - Simulation framework for winding/unwinding systems"
authors = [
    {name = "R&D Team", email = "rd@example.com"},
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0", 
    "control>=0.9.4",
    "pandas>=2.2.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
